<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.mediamonksexercise.domain.model.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/paddingHorizontalLayout"
        android:paddingVertical="@dimen/paddingVerticalLayout">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_image_album_holder"
            android:layout_width="@dimen/widthHeightAlbumImageHolder"
            android:layout_height="@dimen/widthHeightAlbumImageHolder"
            android:src="@drawable/iv_image_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartAlbumTitle"
            android:layout_marginTop="@dimen/marginTopAlbumTitle"
            android:text="@string/title_album"
            android:textAppearance="@style/TitleAlbum"
            app:layout_constraintStart_toEndOf="@id/iv_image_album_holder"
            app:layout_constraintTop_toTopOf="@id/iv_image_album_holder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_input_album_title"
            android:layout_width="@dimen/widthInputAlbumTitle"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartInputAlbumTitle"
            android:layout_marginTop="@dimen/marginTopInputAlbumTitle"
            android:text="@{item.title}"
            android:textAppearance="@style/TextAlbumItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_album_title"
            app:layout_constraintTop_toTopOf="@id/iv_image_album_holder"
            tools:text="voluptatem aut maxime inventore" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_album_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartAlbumUserId"
            android:layout_marginTop="@dimen/marginTopAlbumUserId"
            android:text="@string/user_id_album"
            android:textAppearance="@style/TitleAlbum"
            app:layout_constraintBottom_toTopOf="@id/tv_album_detail_id"
            app:layout_constraintStart_toEndOf="@id/iv_image_album_holder"
            app:layout_constraintTop_toBottomOf="@id/tv_input_album_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_input_album_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartInputAlbumUserId"
            android:layout_marginTop="@dimen/marginTopInputAlbumUserId"
            android:text="@{Integer.toString(item.userId)}"
            android:textAppearance="@style/TextAlbumItem"
            app:layout_constraintBottom_toTopOf="@id/tv_album_detail_id"
            app:layout_constraintStart_toEndOf="@id/tv_album_user_id"
            app:layout_constraintTop_toBottomOf="@id/tv_input_album_title"
            tools:text="3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_album_detail_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartAlbumDetailId"
            android:layout_marginTop="@dimen/marginTopAlbumDetailId"
            android:text="@string/id_album"
            android:textAppearance="@style/TitleAlbum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_image_album_holder"
            app:layout_constraintTop_toBottomOf="@id/tv_album_user_id" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_input_album_detail_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartInputAlbumDetailId"
            android:layout_marginTop="@dimen/marginTopInputAlbumDetailId"
            android:text="@{Integer.toString(item.id)}"
            android:textAppearance="@style/TextAlbumItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_album_detail_id"
            app:layout_constraintTop_toBottomOf="@id/tv_input_album_user_id"
            tools:text="3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>